# FinanceBuddy

./: .gitignore  Company_Facts_GME.docx  EDGAR_BasicsGME.docx  Fundamental_AnalysisGME.docx  Qualitative_AnalysisGME.docx
finance_buddy/: pyproject.toml
finance_buddy/output/: company_facts_snapshot.json  edgar_basics.json  news_and_catalysts.json  price_context.json  research_scope.json  synthesis_brief.md  visualized_data.html
finance_buddy/src/: inputs.py
finance_buddy/src/finance_buddy/: crew.py  main.py
finance_buddy/src/finance_buddy/config/: agents.yaml  tasks.yaml
finance_buddy/src/finance_buddy/tools/: __init__.py  custom_extraction_tools.py  free_feeds.py  tools_free_feeds.py
finance_buddy_crew/: pyproject.toml
finance_buddy_crew/output/: company_facts_snapshot.json  edgar_basics.json  fundamental_analysis.json  news_and_catalysts.json  price_context.json  qualitative_analysis.json  report_preview.html  research_scope.json  synthesis_brief.json  synthesis_brief.md
finance_buddy_crew/src/finance_buddy_crew/: GME_prices.csv  GME_prices.json  crew.py  generate_report.py  json_to_pd.py  main.py  test_feed_data.py
finance_buddy_crew/src/finance_buddy_crew/config/: agents.yaml  tasks.yaml
finance_buddy_crew/src/finance_buddy_crew/tools/: companies.json  extraction_tools.py  feeds.py  feeds_tools.py  generate_tool_specs.py  task_callback.py  validate_task_outputs.py
test_crew/: pyproject.toml  report.md
