[project]
name = "finance_buddy"
version = "0.1.0"
description = "finance_buddy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
finance_buddy = "finance_buddy.main:run"
run_crew = "finance_buddy.main:run"
train = "finance_buddy.main:train"
replay = "finance_buddy.main:replay"
test = "finance_buddy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
